# send-me-money-2

./: CONTRIBUTING.md  Cargo.toml  DESCRIPTION.md  HANDBOOK.md  README.md  challenge.yaml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: docker-image.yml
apps/backend/: Cargo.toml  Dockerfile
apps/backend/src/: main.rs
apps/backend/src/routes/: mod.rs
apps/backend/src/routes/balance/: mod.rs
apps/backend/src/routes/send/: mod.rs
apps/frontend/: Cargo.toml  Dockerfile  Trunk.toml  index.css  index.html  index.scss  nginx.conf
apps/frontend/src/: app.rs  main.rs
apps/frontend/src/components/: footer.rs  icons.rs  layout.rs  mod.rs  nav.rs
apps/frontend/src/routes/: dashboard.rs  index.rs  mod.rs  sign_in.rs
apps/frontend/src/utils/: password.rs
flags/: flag.txt
