[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { git = "https://github.com/yewstack/yew.git", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["Storage", "console", "Window"] }
gloo-net = "0.2.4"
wasm-bindgen-futures = "0.4.33"
